# bot697

./: .gitignore  Cargo.toml  README.md  bdo_items.sqlite  config.json
migrations/: 20240630193604_initial.sql  20240701220906_user.sql
src/: cli.rs  main.rs
src/bdo/: items.rs  mod.rs
src/commands/: bdo.rs  mod.rs  ping.rs  rng.rs
src/commands/dev/: mod.rs  register.rs  say.rs
src/commands/utils/: mod.rs
src/commands/voice/: mod.rs
src/db/: bdo.rs  mod.rs
