[package]
name = "bot697"
version = "0.1.0"
description = "A general purpose discord bot for my projects"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
bdo-enhancement-calc = {path = "../bdo-enhancement-calc"}
serde = "1.0.203"
serde_json = "1.0.120"
phf = { version = "0.11.2", features = ["macros"] }
fuzzy-matcher = "0.3.7"
